--- a/packages/query-graphql/tsconfig.json
+++ b/packages/query-graphql/tsconfig.json
@@ -1,14 +1,4 @@
 {
     "extends": "../../tsconfig.json",
-    "compilerOptions": {
-        "outDir": "./dist",
-        "rootDir": "./src"
-    },
-    "references": [
-        { "path": "../core" }
-    ],
-    "exclude": [
-        "node_modules",
-        "dist"
-    ]
+    "include": ["src"]
 }
