--- a/examples/nest-graphql-typeorm/ormconfig.json
+++ b/examples/nest-graphql-typeorm/ormconfig.json
@@ -1,14 +1,6 @@
 {
-    "type": "postgres",
-    "host": "localhost",
-    "port": 5436,
-    "username": "graphqltypeorm",
-    "database": "graphql_typeorm",
-    "entities": ["dist/**/*.entity{.ts,.js}"],
-    "migrations": ["dist/migrations/**.js"],
-    seeds: ['seeds/**/*.seed.ts'],
-    "synchronize": false,
-    "cli": {
-        "migrationsDir": "./migrations"
-    }
+  "seeds": ["./seeds.ts"],
+  "cli": {
+    "migrationsDir": "./migrations"
+  }
 }
