--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,11 +1,4 @@
 {
     "extends": "../../tsconfig.json",
-    "compilerOptions": {
-        "outDir": "./dist",
-        "rootDir": "src"
-    },
-    "exclude": [
-        "node_modules",
-        "dist"
-    ]
+    "include": ["src", "test"]
 }
