--- a/examples/nest-graphql-typeorm/ormconfig.json
+++ b/examples/nest-graphql-typeorm/ormconfig.json
@@ -1,5 +1,14 @@
 {
+  "type": "postgres",
+  "host": "localhost",
+  "port": 5436,
+  "username": "graphqltypeorm",
+  "database": "graphql_typeorm",
+  "entities": ["dist/**/*.entity{.ts,.js}"],
+  "migrations": ["dist/migrations/**.js"],
   "seeds": ["./seeds.ts"],
+  "synchronize": false,
+  "logging": true,
   "cli": {
     "migrationsDir": "./migrations"
   }
