--- a/examples/nest-graphql-typeorm/tsconfig.build.json
+++ b/examples/nest-graphql-typeorm/tsconfig.build.json
@@ -4,5 +4,6 @@
         "declaration": false,
         "outDir": "./dist"
     },
+    "include": ["src/**/*"],
     "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
 }
