--- a/examples/nest-graphql-typeorm/tsconfig.build.json
+++ b/examples/nest-graphql-typeorm/tsconfig.build.json
@@ -4,6 +4,6 @@
         "declaration": false,
         "outDir": "./dist"
     },
-    "include": ["src/**/*"],
+    "include": ["src", "migrations"],
     "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
 }
