--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -10,10 +10,13 @@
     "lib": "dist"
   },
   "dependencies": {
-    "@nestjs-query/core": "^1.0.0"
+    "@nestjs-query/core": "^1.0.0",
+    "change-case": "^3.1.0",
+    "pluralize": "^8.0.0"
   },
   "peerDependencies": {
     "graphql-relay": "latest",
+    "@nestjs/graphql": "^6.5.3",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.2",
     "reflect-metadata": "^0.1.13",
@@ -35,6 +38,7 @@
     "url": "https://github.com/doug-martin/nestjs-query/issues"
   },
   "devDependencies": {
-    "@types/graphql-relay": "^0.4.11"
+    "@types/graphql-relay": "^0.4.11",
+    "@types/pluralize": "0.0.29"
   }
 }
