Add ability to specify guards and interceptors

--- a/package.json
+++ b/package.json
@@ -10,29 +10,30 @@
     "test": "jest --runInBand -c=jest.config.js --coverage --verbose"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.21",
-    "@types/node": "^12.12.0",
-    "@typescript-eslint/eslint-plugin": "^2.6.0",
-    "@typescript-eslint/parser": "^2.6.0",
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.7",
+    "@typescript-eslint/eslint-plugin": "^2.7.0",
+    "@typescript-eslint/parser": "^2.7.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^23.0.2",
+    "eslint-plugin-jest": "^23.0.4",
     "eslint-plugin-prettier": "^3.1.1",
     "jest": "^24.9.0",
     "jest-extended": "^0.11.2",
-    "lerna": "^3.18.3",
+    "lerna": "^3.18.4",
     "nyc": "^14.1.1",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "ts-jest": "^24.1.0",
     "ts-mockito": "^2.5.0",
     "tsconfig-extends": "^1.0.1",
-    "typescript": "^3.6.4"
+    "typescript": "^3.7.0",
+    "sqlite3": "^4.1.0"
   },
   "dependencies": {
-    "@nestjs/common": "^6.8.5",
+    "@nestjs/common": "^6.9.0",
     "@types/graphql-relay": "^0.4.11",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
