--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
     "parserOptions": {
         "ecmaVersion": 2019,
         "sourceType": "module",
-        "project": "./tsconfig.json",
+        "project": "./tsconfig.build.json",
         "createDefaultProgram": true
     },
     "plugins": [
