--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,7 @@
         "paths": {
             "@nestjs-query/core": ["core/src"],
             "@nestjs-query/query-graphql": ["query-graphql/src"],
-            "@nestjs-query/query-typeorm": ["query-typeorm/src"],
-            "@nestjs-query/core/*": ["core/src/*"],
-            "@nestjs-query/query-graphql/*": ["query-graphql/src/*"],
-            "@nestjs-query/query-typeorm/*": ["query-typeorm/src/*"]
+            "@nestjs-query/query-typeorm": ["query-typeorm/src"]
         }
     },
     "references": [
