Added husky and increased coverage to 100%

--- a/examples/nest-graphql-typeorm/package.json
+++ b/examples/nest-graphql-typeorm/package.json
@@ -10,16 +10,8 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "APP_ROOT_PATH=. nest start",
-    "start:dev": "APP_ROOT_PATH=. nest start --watch",
-    "start:debug": "APP_ROOT_PATH=. nest start --debug --watch",
+    "start": "APP_ROOT_PATH=. nest start --watch",
     "start:prod": "node dist/main",
-    "lint": "tslint -p tsconfig.json -c tslint.json",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
     "migrate:up": "typeorm migration:run",
     "migrate:generate": "npm run build && typeorm migration:generate -d ./migrations ",
     "seed": "ts-node ../../node_modules/typeorm-seeding/dist/cli.js --config ./ormconfig.json seed"
