--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,8 @@
 {
   "tagVersionPrefix": "v",
   "packages": [
-    "packages/*",
-    "examples/*"
+    "examples/*",
+    "packages/*"
   ],
-  "version": "0.0.0"
+  "version": "0.0.1-alpha.0"
 }
