--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs-query/query-graphql",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "Nestjs graphql query adapter",
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
@@ -27,7 +27,7 @@
     "url": "https://github.com/doug-martin/nestjs-query/issues"
   },
   "dependencies": {
-    "@nestjs-query/core": "^0.0.0",
+    "@nestjs-query/core": "^0.0.1-alpha.0",
     "@types/lodash.pick": "^4.4.6",
     "change-case": "^3.1.0",
     "lodash.pick": "^4.4.0",
@@ -36,10 +36,10 @@
   "peerDependencies": {
     "@nestjs/common": "^6.9.0",
     "@nestjs/graphql": "^6.5.3",
-    "graphql": "^14.5.8",
-    "graphql-relay": "^0.6.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.2",
+    "graphql": "^14.5.8",
+    "graphql-relay": "^0.6.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^0.17.5"
   },
