--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,6 +10,9 @@
   "files": [
     "dist/src/**"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/doug-martin/nestjs-query.git"
