--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -53,6 +53,7 @@
     "@types/graphql-relay": "^0.4.11",
     "@types/node-fetch": "^2.5.4",
     "@types/pluralize": "0.0.29",
+    "@types/lodash.pick": "^4.4.6",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.2",
     "graphql": "^14.5.8",
