Update docs and add new features
* Simplified specifying create and update dtos when using CRUDResolver
* Normalized options interface across each resolver type

--- a/examples/nest-graphql-typeorm/package.json
+++ b/examples/nest-graphql-typeorm/package.json
@@ -33,6 +33,7 @@
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
     "type-graphql": "^0.17.5",
+    "typeorm": "^0.2.20",
     "typeorm-seeding": "^1.2.0"
   },
   "devDependencies": {
