Update docs and add type caching
* Added new docs about custom methods in resolvers.
* Added caching to graphql types

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,9 +7,10 @@
   "license": "ISC",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
-  "files": [
-    "dist/src/**"
-  ],
+  "directories": {
+    "lib": "dist/src",
+    "test": "__tests__"
+  },
   "publishConfig": {
     "access": "public"
   },
