--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -8,7 +8,7 @@
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "directories": {
-    "lib": "dist",
+    "lib": "dist/src",
     "test": "__tests__"
   },
   "files": [
