--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs-query/query-typeorm",
-  "version": "0.0.5-alpha.0",
+  "version": "0.0.1",
   "description": "Typeorm adapter for @nestjs-query/core",
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
@@ -18,7 +18,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@nestjs-query/core": "^0.0.5-alpha.0"
+    "@nestjs-query/core": "^0.0.1"
   },
   "peerDependencies": {
     "@nestjs/common": "^6.9.0",
