Add files field to core package

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,6 +11,9 @@
     "lib": "dist/src",
     "test": "__tests__"
   },
+  "files": [
+    "dist/src/**"
+  ],
   "publishConfig": {
     "access": "public"
   },
