--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,7 +29,13 @@
   "bugs": {
     "url": "https://github.com/doug-martin/nestjs-query/issues"
   },
+  "peerDependencies": {
+    "@nestjs/common": "^6.9.0",
+    "class-transformer": "^0.2.3"
+  },
   "devDependencies": {
-    "typescript": "^3.7.0"
+    "typescript": "^3.7.0",
+    "@nestjs/common": "^6.9.0",
+    "class-transformer": "^0.2.3"
   }
 }
