--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs-query/core",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Base query package",
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
@@ -34,8 +34,8 @@
     "class-transformer": "^0.2.3"
   },
   "devDependencies": {
-    "typescript": "^3.7.0",
     "@nestjs/common": "^6.9.0",
-    "class-transformer": "^0.2.3"
+    "class-transformer": "^0.2.3",
+    "typescript": "^3.7.0"
   }
 }
