--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -39,37 +39,38 @@
   },
   "dependencies": {
     "@nestjs-query/core": "^0.3.2",
-    "change-case": "^3.1.0",
-    "lodash.omit": "^4.4.0",
+    "upper-case-first": "^2.0.1",
+    "lower-case-first": "^2.0.1",
+    "lodash.omit": "^4.5.0",
     "pluralize": "^8.0.0"
   },
   "peerDependencies": {
-    "@nestjs/common": "^6.9.0",
-    "@nestjs/graphql": "^6.5.3",
+    "@nestjs/common": "^6.11.8",
+    "@nestjs/graphql": "^6.5.5",
     "class-transformer": "^0.2.3",
-    "class-validator": "^0.10.2",
-    "dataloader": "2.0.0",
-    "graphql": "^14.5.8",
+    "class-validator": "^0.11.0",
+    "dataloader": "^2.0.0",
+    "graphql": "^14.6.0",
     "graphql-relay": "^0.6.0",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^0.17.5"
+    "type-graphql": "^0.17.6"
   },
   "devDependencies": {
-    "@nestjs/common": "^6.9.0",
-    "@nestjs/graphql": "^6.5.3",
-    "@types/graphql": "^14.0.7",
+    "@nestjs/common": "^6.11.8",
+    "@nestjs/graphql": "^6.5.5",
+    "@types/graphql": "^14.5.0",
     "@types/graphql-relay": "^0.4.11",
-    "@types/lodash.omit": "^4.4.6",
+    "@types/lodash.omit": "^4.5.6",
     "@types/node-fetch": "^2.5.4",
-    "@types/pluralize": "0.0.29",
+    "@types/pluralize": "^0.0.29",
     "class-transformer": "^0.2.3",
-    "class-validator": "^0.10.2",
-    "dataloader": "2.0.0",
-    "graphql": "^14.5.8",
+    "class-validator": "^0.11.0",
+    "dataloader": "^2.0.0",
+    "graphql": "^14.6.0",
     "graphql-relay": "^0.6.0",
     "reflect-metadata": "^0.1.13",
     "ts-mockito": "^2.5.0",
-    "type-graphql": "^0.17.5",
-    "typescript": "^3.7.0"
+    "type-graphql": "^0.17.6",
+    "typescript": "^3.8.2"
   }
 }
