--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs-query/query-graphql",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "description": "Nestjs graphql query adapter",
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
@@ -38,11 +38,11 @@
     "url": "https://github.com/doug-martin/nestjs-query/issues"
   },
   "dependencies": {
-    "@nestjs-query/core": "^0.3.2",
-    "upper-case-first": "^2.0.1",
-    "lower-case-first": "^2.0.1",
+    "@nestjs-query/core": "^0.3.3",
     "lodash.omit": "^4.5.0",
-    "pluralize": "^8.0.0"
+    "lower-case-first": "^2.0.1",
+    "pluralize": "^8.0.0",
+    "upper-case-first": "^2.0.1"
   },
   "peerDependencies": {
     "@nestjs/common": "^6.11.8",
