--- a/examples/nest-graphql-typeorm/tsconfig.build.json
+++ b/examples/nest-graphql-typeorm/tsconfig.build.json
@@ -7,7 +7,8 @@
     },
     "include": [
         "src",
-        "migrations"
+        "migrations",
+        "ormconfig.json"
     ],
     "exclude": [
         "node_modules",
