--- a/examples/nest-graphql-typeorm/tsconfig.json
+++ b/examples/nest-graphql-typeorm/tsconfig.json
@@ -4,6 +4,6 @@
     "outDir": "./dist",
     "rootDir": "."
   },
-  "include": ["src", "test", "migrations"],
+  "include": ["src", "test", "migrations", "ormconfig.json"],
   "exclude": ["node_modules", "dist"]
 }
