--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@nestjs/common": "^6.11.8",
     "class-transformer": "^0.2.3",
+    "ts-mockito": "^2.5.0",
     "typescript": "^3.8.2"
   }
 }
