Allow for composite primary keys
* [FIXED] Tables with composite primary keys are not quoted properly.

--- a/examples/nest-graphql-typeorm/ormconfig.json
+++ b/examples/nest-graphql-typeorm/ormconfig.json
@@ -5,9 +5,9 @@
   "username": "graphqltypeorm",
   "database": "graphql_typeorm",
   "autoLoadEntities": true,
-  "migrations": ["dist/migrations/**.js"],
-  "seeds": ["./seeds.ts"],
-  "synchronize": false,
+  "entities": ["**/*.entity.js"],
+  "seeds": ["./dist/seeds.js"],
+  "synchronize": true,
   "logging": true,
   "cli": {
     "migrationsDir": "./migrations"
