Basic federation support
# Conflicts:
#	examples/federation/sub-task-graphql/package.json
#	examples/federation/sub-task-graphql/src/sub-task/dto/todo-item.dto.ts
#	examples/federation/sub-task-graphql/src/sub-task/sub-task.module.ts
#	examples/federation/sub-task-graphql/src/sub-task/sub-task.resolver.ts
#	examples/federation/sub-task-graphql/src/sub-task/todo-item.resolver.ts
#	examples/federation/tag-graphql/package.json
#	examples/federation/tag-graphql/src/tag/tag-todo-item.resolver.ts
#	examples/federation/tag-graphql/src/tag/tag.module.ts
#	examples/federation/tag-graphql/src/tag/todo-item.resolver.ts
#	examples/federation/todo-item-graphql/package.json
#	packages/query-graphql/src/resolvers/federation/federation.resolver.ts
#	packages/query-graphql/src/resolvers/federation/index.ts

--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,7 @@
   "tagVersionPrefix": "v",
   "packages": [
     "examples/*",
+    "examples/federation/*",
     "packages/*"
   ],
   "command": {
