--- a/examples/federation/sub-task-graphql/tsconfig.json
+++ b/examples/federation/sub-task-graphql/tsconfig.json
@@ -4,6 +4,6 @@
     "outDir": "./dist",
     "rootDir": "."
   },
-  "include": ["src", "test", "seed.ts", "e2e", "ormconfig.json"],
+  "include": ["src", "e2e", "seeds.ts", "ormconfig.json"],
   "exclude": ["node_modules", "dist"]
 }
