--- a/examples/federation/sub-task-graphql/package.json
+++ b/examples/federation/sub-task-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sub-task-graphql",
-  "version": "0.7.5",
+  "version": "0.8.1",
   "description": "",
   "author": "",
   "private": true,
@@ -12,43 +12,44 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "APP_ROOT_PATH=. nest start --watch",
     "start:prod": "node dist/main",
-    "reset": "npm run build && typeorm schema:drop && npm run schema:sync",
-    "schema:sync": "typeorm schema:sync"
+    "reset": "npm run build && typeorm schema:drop -c sub-task-db && npm run schema:sync && npm run seed",
+    "schema:sync": "typeorm schema:sync -c sub-task-db",
+    "seed": "node ../../../node_modules/typeorm-seeding/dist/cli.js -n ./ormconfig.json -c sub-task-db seed"
   },
   "dependencies": {
-    "@apollo/federation": "^0.13.2",
-    "@nestjs-query/core": "^0.7.4",
-    "@nestjs-query/query-graphql": "^0.7.4",
-    "@nestjs-query/query-typeorm": "^0.7.5",
-    "@nestjs/common": "^7.0.6",
-    "@nestjs/core": "^7.0.6",
-    "@nestjs/graphql": "^7.1.3",
-    "@nestjs/platform-express": "^7.0.6",
+    "@apollo/federation": "^0.14.1",
+    "@nestjs-query/core": "^0.8.4",
+    "@nestjs-query/query-graphql": "^0.8.4",
+    "@nestjs-query/query-typeorm": "^0.8.4",
+    "@nestjs/common": "^7.0.8",
+    "@nestjs/core": "^7.0.8",
+    "@nestjs/graphql": "^7.3.1",
+    "@nestjs/platform-express": "^7.0.8",
     "@nestjs/typeorm": "^7.0.0",
-    "apollo-server-express": "^2.11.0",
-    "graphql": "^14.6.0",
-    "graphql-tools": "^4.0.7",
-    "pg": "^7.18.2",
+    "apollo-server-express": "^2.12.0",
+    "graphql": "^15.0.0",
+    "graphql-tools": "^5.0.0",
+    "pg": "^8.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4",
+    "rxjs": "^6.5.5",
     "typeorm": "^0.2.24",
-    "typeorm-seeding": "^1.3.0"
+    "typeorm-seeding": "^1.6.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.0.2",
+    "@nestjs/cli": "^7.1.2",
     "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.6",
-    "@types/express": "^4.17.3",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^12.12.31",
+    "@nestjs/testing": "^7.0.8",
+    "@types/express": "^4.17.6",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.13.0",
     "@types/supertest": "^2.0.8",
-    "jest": "^25.2.3",
-    "prettier": "^2.0.2",
+    "jest": "^25.4.0",
+    "prettier": "^2.0.4",
     "supertest": "^4.0.2",
-    "ts-jest": "^25.2.1",
-    "ts-loader": "^6.2.2",
-    "ts-node": "^8.8.1",
+    "ts-jest": "^25.4.0",
+    "ts-loader": "^7.0.0",
+    "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3"
   },
