--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: docker-compose -f ./examples/nest-graphql-typeorm/docker-compose.yml up -d
+      - run: docker-compose -f ./examples/federation/docker-compose.yml up -d
       - run: npm ci
       - run: npm run bootstrap -- --ignore-scripts
       - run: npm run build
