chore(renovate): Renovate set ignorePaths to empty

--- a/renovate.json
+++ b/renovate.json
@@ -2,9 +2,6 @@
   "extends": [
     "config:base"
   ],
-  "includePaths": [
-    "package.json",
-    "**/packages/**",
-    "**/examples/**"
+  "ignorePaths": [
   ]
 }
